fix : css detail (color, dark mode hierarchy)

--- a/src/shared/styles/tailwind/base.css
+++ b/src/shared/styles/tailwind/base.css
@@ -360,7 +360,7 @@
         }
 
         code {
-          @apply bg-green-brighter dark:bg-green-darker;
+          @apply bg-green-brighter dark:bg-emerald-950;
         }
       }
 
