--- a/src/shared/styles/tailwind/components.css
+++ b/src/shared/styles/tailwind/components.css
@@ -41,7 +41,7 @@
   }
 
   .icons-color {
-    @apply fill-gray-300 hover:cursor-pointer hover:border-gray-400 hover:bg-gray-100 hover:fill-gray-600 dark:fill-white hover:dark:border-green-main hover:dark:fill-green-main active:dark:border-green-darker active:dark:fill-green-darker hover:dark:bg-transparent rounded duration-200;
+    @apply fill-gray-300 hover:cursor-pointer hover:border-gray-400 hover:bg-gray-100 hover:fill-gray-600 dark:fill-white hover:dark:border-green-brighter hover:dark:fill-green-brighter active:dark:border-green-main active:dark:fill-green-main hover:dark:bg-transparent rounded duration-200;
   }
 
   .icons-border {
